fix header jump

--- a/components/shared/header/header.module.css
+++ b/components/shared/header/header.module.css
@@ -21,7 +21,6 @@
 
 .activeSection {
     color: var(--navyBlue);
-    font-size: 16px;
     font-weight: 800;
 }
 
